deploy/manifests/Ingress/app1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-cache-key: $cookie_id_token
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2-k8s-proxy.djkormo.github.com/login
    nginx.ingress.kubernetes.io/auth-url: https://oauth2-k8s-proxy.djkormo.github.com/check
  name: app1
  namespace: proxy
spec:
  rules:
  - host: oauth2-k8s-proxy.djkormo.github.com
    http:
      paths:
      - backend:
          service:
            name: app1
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
