deploy/manifests/Ingress/oauth2-k8s-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
  name: oauth2-k8s-proxy-ingress
  namespace: proxy
spec:
  rules:
  - host:  oauth2-k8s-proxy.djkormo.github.com
    http:
      paths:
      - backend:
          service:
            name: oauth2-k8s-proxy
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
